--- a/templates/result.html
+++ b/templates/result.html
@@ -13,7 +13,7 @@
             </div>
 
             <div class="fadeIn second">
-                <ul>
+                <ul style="list-style-type:none;">
                     <br>
                     {% for response in all_responses %}
                     <li>{{ response }}</li>
